[package]
name = "rust_utils"
version = "0.0.1"
edition = "2021"
authors = ["ifeisier <ifeisier@hotmail.com>"]
description = "程序入口"
repository = "https://github.com/ifeisier/rust_utils"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.63"
log = { version = "0.4.22", optional = true }
flexi_logger = { version = "0.29.0", optional = true }
rand = { version = "0.8.5", optional = true }

[features]
logger = ["log", "flexi_logger"]
randx = ["rand"]
