[package]
name = "rust_utils"
version = "0.0.1"
edition = "2021"
authors = ["ifeisier <ifeisier@hotmail.com>"]
description = "程序入口"
repository = "https://github.com/ifeisier/rust_utils"
license = "MIT"

[dependencies]
anyhow = "1.0.89"
thiserror = "1.0.63"
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = "1.0.128"

log = { version = "0.4.22", optional = true }
flexi_logger = { version = "0.29.0", optional = true }
rand = { version = "0.8.5", optional = true }
reqwest = { version = "0.12.5", features = ["blocking", "json"], optional = true }

[features]
default = []
logger_ext = ["log", "flexi_logger"]
rand_ext = ["rand"]
reqwest_ext = ["reqwest"]
